update readme file and swagger
